bugfix/ fix time frame container shifting when latest button appears

--- a/src/pages/platformAmbient/Trade/TradeCharts/TradeCharts.module.css
+++ b/src/pages/platformAmbient/Trade/TradeCharts/TradeCharts.module.css
@@ -1,5 +1,6 @@
 .chart_overlay_container {
     display: flex;
+    min-width: 180px;
     justify-content: flex-end;
     align-items: flex-end;
 }
